--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,14 @@
 
 .navbar {
     background-color: palegoldenrod;
-    color: #6A35FC
+}
+
+.navlink:hover {
+    color: #6A35FC;
+}
+
+.navbar-toggler {
+    color: lightgrey;
 }
 
 .header {
@@ -13,7 +20,8 @@
 
 .header-text {
     padding: 10px;
-    color: #FC5B35
+    color: #FC5B35;
+    letter-spacing: 1.5px;
 }
 
 .header-text a {
@@ -21,20 +29,23 @@
     text-decoration: none;    
 }
 
+h1 a {
+    font-size: 50px;
+}
+
 .header-text a,
 .highlighter{
     background-image: linear-gradient(to right, white 50%, white 60%);
     background-position: -0% 0;
-    background-size: 200% auto;
+    background-size: 100% 88%;
     background-repeat: no-repeat;
     transition: background .5s;
 }
 
 .header-text a:hover,
 .highlighter:hover {
-    background-size: 100% 100%;
-    background-position: -99.99% 0;
-    box-shadow: inset 0 -.5em 0 0 white; 
+    background-size: 70% 95%;
+    background-position: -90% 0;
 }
 
 p .highlighter {
@@ -42,8 +53,7 @@ p .highlighter {
 }
 
 .content-shell {
-    background-image: url(images/minnie-walrus.png);
-    background-repeat: no-repeat;
+    background: #FC5B35;
 }
 
 
@@ -62,18 +72,35 @@ p .highlighter {
 
 .header-text {
     position: absolute;
+    right: 50px;
+    top: 80px;
+    z-index: 1150;
+}
+
+h1 a {
+    font-size: 45px;
+}
+
+/* .spiralJetty {
+    position: relative;
+    box-shadow: 5px 10px #6A35FC;
+} */
+
+
+}
+
+@media (min-width: 1024px) {
+
+.header-text {
+    position: absolute;
     right: 170px;
     top: 100px;
     z-index: 1150;
-    color: #FC5B35;
-    letter-spacing: 1.5px;
-    /* line-height: 2em; */
-}
+    } 
 
 .spiralJetty {
     position: relative;
     box-shadow: 5px 10px #6A35FC;
-}
-
+    }
 
 }
