--- a/kyle-site/css/style.css
+++ b/kyle-site/css/style.css
@@ -97,9 +97,8 @@ svg {
 svg {
     display: flex;
     align-self: flex-end;
-    flex-grow: 1;
-    height: 70%;
-    width: 70%;
+    height: 50%;
+    width: 60%;
     background-color: cornsilk;
     z-index: 2000;
 }
@@ -109,8 +108,8 @@ svg {
 }
 
 .topshell {
-    border-right: 20px solid #FF4D3E;
-    border-left: 20px solid #FF4D3E;
+    border-right: 10px solid #FF4D3E;
+    border-left: 10px solid #FF4D3E;
     margin-left: 0 auto;
     display: flex;
     flex-direction: row;
@@ -153,6 +152,15 @@ svg {
     stroke: red;
 }
 
+.headsvg {
+    margin-bottom: 8px;
+    flex-grow: 0.3;
+}
+
+.lowersvg {
+    flex-grow: 1;
+}
+
 /* #bio {
     width: 50%;
     display: flex;
@@ -160,11 +168,12 @@ svg {
 } */
 
 .bio-contain {
-    border-top: 20px solid #FF4D3E;
-    border-bottom: 20px solid #FF4D3E;
+    /* border-top: 10px solid #FF4D3E;
+    border-bottom: 10px solid #FF4D3E; */
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-around;
+    background-color: #FF4D3E;
 }
 
 #bio{
@@ -193,7 +202,6 @@ svg {
     .mainSVG {
         width: 90%;
         height: 75%;
-        border-bottom: 20px solid #FF4D3E;
     }
 
     .mirrorImg svg {
@@ -210,15 +218,15 @@ svg {
 
     .bio-plant {
         width: 30%;
-        border-left: 20px solid #FF4D3E;
+        border-left: 10px solid #FF4D3E;
     }
 
     .contact {
-        border-top: 20px solid #FF4D3E;
+        border-top: 10px solid #FF4D3E;
     }
 
     .contact .noto {
-        border-right: 20px solid #FF4D3E;
+        border-right: 10px solid #FF4D3E;
     }
 
 
