--- a/MAD-libz/styles.css
+++ b/MAD-libz/styles.css
@@ -4,10 +4,18 @@
     display: none;
 }
 body {
-    background-image: repeating-radial-gradient(farthest-side at 200px 200px, lavender 10%, whitesmoke 90%);
-    background-repeat: repeat;
-    background-size: auto;
+    background: repeating-radial-gradient(farthest-side at 200px 200px, #cf97ee 20%, #eae8c7 30%, #b6ea84 50%);
+    background-size: 600% 600%;
+    animation: background-gradient 10s ease infinite;
 }
+    /* background-image: repeating-radial-gradient(farthest-side at 200px 200px, lavender 10%, whitesmoke 90%);
+    background-repeat: repeat;
+    background-size: auto; */
+    @keyframes background-gradient { 
+        0%{background-position:0% 51%}
+        50%{background-position:100% 50%}
+        100%{background-position:0% 51%}
+    }    
 
 h1 {
     margin: 1em;
