--- a/listiclepage/list-styles.css
+++ b/listiclepage/list-styles.css
@@ -149,7 +149,8 @@ ol {
 }
 
 .modalimg {
-    width: 20%;
+    width: 40%;
+    height: 90%;
 }
 
 
@@ -164,4 +165,12 @@ p {
     font-family: 'Italianno', cursive;
     font-size: 35px;
     letter-spacing: 1.8;
+}
+
+@media (min-width: 768px) {
+
+    .modalimg {
+        width: 20%;
+    }    
+
 }
