--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,7 @@ p .highlighter {
 
 .tab-pane p {
     line-height: 1.8;
-    background-color: cornsilk;
+    background-color: white;
     padding: 10px;
 }
 
@@ -153,13 +153,17 @@ p .highlighter {
 }
 
 .bio {
+    margin-top: 15px;
     font-size: 25px;
     padding-top: 15px;
     line-height: 2;
     text-align: center;
+    background-color: white;
+    display: flex;
+    align-self: center;
 }
 
-/* content section ------- */
+/* contact section ------- */
 #contact h3 {
     color: #FC5B35;
 }
