--- a/listiclepage/list-styles.css
+++ b/listiclepage/list-styles.css
@@ -47,7 +47,7 @@ h1:hover {
 .btn {
     font-size: 25px;
     border: 1px solid #FC766Aff;
-    background-image: linear-gradient(45deg, #FC766Aff 50%, #0a4234 50%);
+    background-image: linear-gradient(45deg, #FC766Aff 70%, #0a4234 30%);
     background-size: 270%;
     background-repeat: repeat;
     background-position: top right;
@@ -68,7 +68,7 @@ h1:hover {
 .animatedText {
     padding: 5px;
     background-color:#FC766Aff;
-    background-image: linear-gradient(45deg, #0a4234 50%, #FC766Aff 50%);
+    background-image: linear-gradient(45deg, #0a4234 70%, #FC766Aff 30%);
   background-size: 270%;
   background-repeat: repeat;
   background-position: top right;
@@ -174,6 +174,11 @@ p {
     
     .textOfHead {
         width: 30%;
+    }
+
+    .btn,
+    .animatedText {
+        background-image: linear-gradient(45deg, #FC766Aff 50%, #0a4234 50%);
     }
 
 }
