--- a/styles.css
+++ b/styles.css
@@ -78,15 +78,12 @@ p .highlighter {
 
 .content-shell h1 {
     padding: 10px;
+    margin-left: .5em;
     align-self: flex-start;
     letter-spacing: 1.5px;
     font-weight: 300;
     font-size: 45px;
-    background-image: linear-gradient(to right, white 50%, white 60%);
-    background-position: -10% 6%;
-    background-size: 95% 87%;
-    background-repeat: no-repeat;
-    color: #6A35FC;
+    color: white;
 }
 
 .content-shell {
@@ -190,10 +187,6 @@ padding: 1em;
     text-align: right;
     align-self: flex-end;
     letter-spacing: 1px;
-    background-image: linear-gradient(to right, white 50%, white 60%);
-    background-position: 95% 4%;
-    background-size: 20% 87%;
-    background-repeat: no-repeat;
 }
 
 .myself {
